# zephyr_nrf_power

./: CMakeLists.txt  Kconfig  prj.conf  test.conf  west.yml
src/: main.c
